--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ nav {
 }
 
 #nav-list li a:hover {
-  color: #e37106;
+  color: #FFCB9A;
 }
 
 /* Page Title */
@@ -158,7 +158,7 @@ body.dark-mode h3 {
 
 .cta-button:hover {
   transform: scale(1.05); /* Slightly enlarge */
-  background-color: #ff9a44; /* Change color */
+  background-color: #FFCB9A; /* Change color */
 }
 
 /* Project Cards */
@@ -199,7 +199,7 @@ footer {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background: #e37106;
+  background: #FFCB9A;
   color: #fff;
   border: none;
   padding: 0.75rem 1.5rem;
@@ -212,7 +212,7 @@ footer {
 }
 
 .dark-mode-toggle:hover {
-  background: #ff9a44;
+  background: #FFCB9A;
   transform: translateY(-2px);
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
 }
@@ -224,7 +224,7 @@ footer {
 
 /* CTA Button */
 .cta-button {
-  background: #e37106;
+  background: #FFCB9A;
   color: #fff;
   padding: 0.75rem 1.5rem;
   border-radius: 25px;
@@ -237,7 +237,7 @@ footer {
 }
 
 .cta-button:hover {
-  background: #ff9a44;
+  background: #FFCB9A;
   transform: translateY(-2px);
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
 }
